# hackcanadanear

./: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
near-contract/: Cargo.toml
near-contract/src/: lib.rs
src/: agent.js  ed25519.js  index.js
src/config/: environment.js  nearConfig.js
src/controllers/: negotiationController.js  nftController.js
src/routes/: nftRoutes.js
src/services/: attestationService.js  init.js  llmService.js  nearService.js  test.js  work.js
