[package]
name = "near-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.8.1", default-features = false, features = ["wee_alloc"] }
near-contract-standards = { version = "5.8.1", default-features = false }
borsh = "1.1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true